# sys-monitor

./: .gitignore  clippy-context.txt  full-clippy-log.txt  latest-clippy.txt  pyproject.toml  sys-monitor打开GitHub仓库.url  ubuntu-clippy-last200.txt  ubuntu-only.txt
.backup/phase1-cleanup/: agent-config.json  snapshot-manager.py  spec-driven-agent.py  test-agent.py  verify-automation.py
.github/: CICD_GUIDE.md  dependabot.yml
.lingma/: CHANGELOG.md  README.md  README_UPDATED.md
.planning/: .continue-here.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  scan_status.md
checkpoints/: test-checkpoint.json
scripts/: analyze_reports.py  audit_all_memories.py  batch_optimize_components.py  check_root_cleanliness.py  clean-root-directory.ps1  cleanup_spec_cache.py  debug_supervisor.py  final_fix_all.py  final_verification.py  find_workspace_memories.py  fix_memory_scope.py  full_system_scan.py  monitor_build.py  sync-mcp-config.py  urgent_fix_rules.py  verify-mcp-setup.py  verify-setup.py  verify-setup.sh  verify_all_agents.py  verify_memory_length.py  verify_system_effectiveness.py
sys-monitor/: .env.example  .gitignore  COMPLETION_CHECKLIST.md  INSTALL.md  README.md  RELEASE_NOTES_v2.0.0.md  TESTING_GUIDE.md  TEST_QUICK_REF.md  TEST_REPORT.md  ZUSTAND_OPTIMIZATION_README.md  debug_scan.js  diagnose_scan.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  simple-test.js  simple_test.html  test-build-monitor.ts  test_report.json  test_scan.js  vite.config.ts  vitest.config.ts
sys-monitor/src-tauri/: Cargo.toml  create_ico.ps1  create_icon.ps1  fix_file.py  make_icon.ps1  tauri.conf.json  tauri.windows.conf.json
sys-monitor/src-tauri/src/: error.rs  error_handling.rs  lib.rs  logger.rs  main.rs
sys-monitor/src-tauri/src/commands/: database.rs  folder.rs  gpu.rs  mod.rs  system.rs  system_test.rs
sys-monitor/src-tauri/src/db/: mod.rs  repository.rs  repository.rs.backup.v2  repository_header.txt  repository_optimized.rs  schema.rs
sys-monitor/src-tauri/src/db/migrations/: 003_folder_analysis.sql
sys-monitor/src-tauri/src/models/: config.rs  folder.rs  metrics.rs  mod.rs
sys-monitor/src-tauri/src/services/: file_watcher_service.rs  file_watcher_service_test.rs  folder_service.rs  mod.rs  system_service.rs
sys-monitor/src-tauri/src/utils/: file_types.rs
sys-monitor/src-tauri/tests/: integration_tests.rs  unit_tests.rs
tests/: README.md  conftest.py  requirements.txt  test_code_review_agent.py  test_documentation_agent.py  test_spec_driven_agent.py  test_supervisor_agent.py  test_test_runner_agent.py
traces/: e6772b35-2b57-4f8b-90dc-e5539fce7907.json
(+653 files in other folders)
