[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "folder-size-monitor"
version = "0.1.0"
description = "Folder size monitoring system with AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "AI Agent Team"}
]
dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "redis>=5.0.0",
    "aiohttp>=3.9.0",
    "bandit>=1.7.5",
    "coverage>=7.3.0",
    "pytest-cov>=4.1.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "mypy>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.bandit]
targets = [".lingma/agents/", "scripts/"]

[tool.coverage.run]
source = [".lingma/"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]