[package]
name = "sys-monitor"
version = "0.1.0"
description = "A cross-platform system monitoring dashboard"
authors = ["Administrator"]
edition = "2021"

[lib]
name = "sys_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = ["config-json5"] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
chrono = "0.4"
