[package]
name = "sys-monitor"
version = "2.0.0"
description = "A cross-platform system monitoring dashboard with runtime monitoring capabilities - Refactored with Service Layer, Real-time Progress, and Performance Optimization"
authors = ["Administrator"]
edition = "2021"

[lib]
name = "sys_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = ["config-json5"] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
chrono = "0.4"
walkdir = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
sentry = "0.47.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wincon"] }

[dev-dependencies]
tempfile = "3"
